--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -88,4 +88,10 @@
         <extension>apk</extension>
         <mime-type>application/octet-stream</mime-type>
     </mime-mapping>  
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/dbWebPersonal</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
